outputs/generated_env/kubernetes/network_policies/cybersim-subnet-1-allow-prometheus-to-nginx-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-prometheus-to-nginx-ingress-controller
  namespace: cybersim-subnet-1
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-zone-b
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 350
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nginx-ingress-controller
  policyTypes:
  - Ingress
